# TF-Bench

./: .env  .gitignore  .pylintrc  LICENSE  README.md  banned.txt  compare.py  env.sh  evaluation_log.txt  experiment.sh  experiment_olama.sh  experiment_ollama.sh  init.sh  install.sh  main.py  mypy.ini  olama_experiment.sh  ollama_pull.sh  out.jsonl  preprocess_benchmark.py  pyproject.toml  requirements.txt  result.csv  run.sh  run_all.py  signatures.json  tryast.py
benchmark/: task_0.core.md  task_0.hs.md  task_0.pure.md  task_1.core.md  task_1.pure.md  task_10.core.md  task_10.pure.md  task_100.core.md  task_101.core.md  task_102.core.md  task_102.hs.md  task_103.core.md  task_104.core.md  task_105.core.md  task_106.core.md  task_107.core.md  task_108.core.md  task_108.hs.md  task_109.core.md  task_109.hs.md  task_11.core.md  task_11.pure.md  task_110.core.md  task_111-1.core.md  task_111.hs.md  task_112.core.md  task_113.core.md  task_114.core.md  task_115.core.md  task_116.hs.md  task_117.hs.md  task_118.hs.md  task_119.hs.md  task_12.core.md  task_12.hs.md  task_12.pure.md  task_120.core.md  task_121.hs.md  task_122.core.md  task_123.core.md  (+269 more)
plots/: correlation.py  model_acc.py  performance.csv  rq4.py  task_distribution.py
scripts/: acc_by_type.sh  analysis_saved.py  data_analysis.py  error_analysis.py  error_cls.py  error_plot.py  experiment_ollama.py  huggingface_upload.py  init.sh  ollama_pull.py  preprocess_benchmark.py  result_analysis.py  result_token_stat.py  run.sh  run_all.py  run_experiments.py
src/: add_dependency.py  ast_test.py  common.py  main.py  (+18 more)
(+57 files in other folders)
